-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 2.1.0-beta1
-
None
-
Linux 64bit
The keyword `new` is C++ only, yet when editing C code, its is highlighted incorrectly.
I also get red underlined warnings.
—
SomeStruct *new;
new = calloc(sizeof(SomeStruct));
new->foo = 1; // ***
—
***: This line has the tooltip " expected token `;' got `->' "
Git 2.1 branch as of today: aa0e82e6c87bf9d26b00f0ddabd5ab81416449d1
- is duplicated by
-
QTCREATORBUG-13973 word 'class' is not keyword in C
-
- Closed
-
- relates to
-
QTCREATORBUG-18004 No C code highlighting in C-projects and files
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-2818 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 182459,6 | CppEditor: Do not highlight C++ and Qt keywords for C | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |