src/plugins/cppeditor/cpphighlighter.h
@@ -27,6 +27,8 @@
 
 #include <texteditor/syntaxhighlighter.h>
 
+#include <cplusplus/Token.h>
+
 #include <QTextCharFormat>
 
 namespace CppEditor {
@@ -42,7 +44,8 @@ class CppHighlighter : public TextEditor::SyntaxHighlighter
 public:
     CppHighlighter(QTextDocument *document = 0);
 
-    virtual void highlightBlock(const QString &text);
+    void setLanguageFeatures(const CPlusPlus::LanguageFeatures &languageFeatures);
+    void highlightBlock(const QString &text) override;
 
 private:
     void highlightWord(QStringRef word, int position, int length);
@@ -53,6 +56,9 @@ private:
                                  int length);
 
     bool isPPKeyword(const QStringRef &text) const;
+
+private:
+    CPlusPlus::LanguageFeatures m_languageFeatures = CPlusPlus::LanguageFeatures::defaultFeatures();
 };
 
 } // namespace Internal
